--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 
 body /*.dark-theme*/ {
    
-    background: url(https://i.pinimg.com/originals/c7/c0/58/c7c0588aa229c05a2c6fa8ee95c4f33f.jpg) ;
+    
+    background-image: url("fon14k.png");
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
@@ -28,7 +29,9 @@ body /*.dark-theme*/ {
 }
 
 
-
+.zagolovok{
+  color: white;
+}
 
 /* Код внешки кнопок перехода */
 a.bott{
@@ -42,15 +45,15 @@ a.bott{
   padding: 10px 15px;
   margin: 20px auto;
   color: #ccc;
-  background-color: #85cce5;
-  background-image: linear-gradient(top, #85cce5 0%, #85cce5 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #85cce5), color-stop(1, #85cce5));
-  background-image: -moz-linear-gradient(top, #85cce5 0%, #85cce5 100%);
-  background-image: -o-linear-gradient(top, #85cce5 0%, #85cce5 100%);
+  background-color: #103200;
+  background-image: linear-gradient(top, #103200 0%, #103200 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #103200), color-stop(1, #103200));
+  background-image: -moz-linear-gradient(top, #103200 0%, #103200 100%);
+  background-image: -o-linear-gradient(top, #103200 0%, #103200 100%);
   border: none;
   border-radius: 3px;
   text-shadow: 0px -1px 0px #000;
-  box-shadow: 0px 1px 0px #8edaf5,0px 5px 0px #8edaf5,0px 6px 6px rgba(0, 0, 0, .6);
+  box-shadow: 0px 1px 0px #103200,0px 5px 0px #103200,0px 6px 6px rgba(0, 0, 0, .6);
   -webkit-transition: ease .15s all;
   -moz-transition: ease .15s all;
   -o-transition: ease .15s all;
@@ -174,6 +177,7 @@ a.bott{
 
 /*строка*/
 .stroka { 
+    color: white;
     font-size: 0.8em;
     position: fixed;
     left:0px;
@@ -183,6 +187,7 @@ a.bott{
 
 /* связь */
 .svyaz {
+    color: white;
     font-size: 0.9em;
     position: fixed;
     left:10px;
@@ -192,6 +197,7 @@ a.bott{
 
 /*версия*/
 .versia {
+    color: white;
     font-size: 0.8em;
     position: fixed;
     left:5px;
@@ -210,17 +216,6 @@ a.bott{
     box-shadow: 0px 5px 20px #5F9EA0;
     border: 1px solid black;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 /*снежинки*/
 .snowflake {
@@ -245,13 +240,343 @@ a.bott{
   color: #000;  
   }           
             
+//гирлянда
 
+/* Стили для гирлянды */
+.b-page_newyear {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  margin-bottom: 0; /* Убираем отступ снизу */
+}
 
+.b-page__content {
+  min-height: 70px;
+}
 
-/*олени*/
+.b-head-decor {
+  display: none;
+}
+
+.b-page_newyear .b-head-decor {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  height: 115px;
+  width: 100%;
+  overflow: hidden;
+  background: url(https://www.dropbox.com/s/v9lpxcfepsvin60/b-head-decor_newyear.png?dl=1) repeat-x 0 0;
+}
+
+.b-page_newyear .b-head-decor__inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 115px;
+  display: block;
+  width: 373px;
+}
+
+.b-page_newyear .b-head-decor::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: -115px;
+  left: 0;
+  z-index: 3;
+  height: 115px;
+  display: block;
+  width: 100%;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.75);
+}
+
+.b-page_newyear .b-head-decor__inner_n2 {
+  left: 373px;
+}
+
+.b-page_newyear .b-head-decor__inner_n3 {
+  left: 746px;
+}
+
+.b-page_newyear .b-head-decor__inner_n4 {
+  left: 1119px;
+}
+
+.b-page_newyear .b-head-decor__inner_n5 {
+  left: 1492px;
+}
+
+.b-page_newyear .b-head-decor__inner_n6 {
+  left: 1865px;
+}
+
+.b-page_newyear .b-head-decor__inner_n7 {
+  left: 2238px;
+}
+
+.b-ball {
+  position: absolute;
+}
+
+.b-ball_n1 {
+  top: 0;
+  left: 3px;
+  width: 59px;
+  height: 83px;
+}
+
+.b-ball_n2 {
+  top: -19px;
+  left: 51px;
+  width: 55px;
+  height: 70px;
+}
+
+.b-ball_n3 {
+  top: 9px;
+  left: 88px;
+  width: 49px;
+  height: 67px;
+}
+
+.b-ball_n4 {
+  top: 0;
+  left: 133px;
+  width: 57px;
+  height: 102px;
+}
+
+.b-ball_n5 {
+  top: 0;
+  left: 166px;
+  width: 49px;
+  height: 57px;
+}
+
+.b-ball_n6 {
+  top: 6px;
+  left: 200px;
+  width: 54px;
+  height: 70px;
+}
+
+.b-ball_n7 {
+  top: 0;
+  left: 240px;
+  width: 56px;
+  height: 67px;
+}
+
+.b-ball_n8 {
+  top: 0;
+  left: 283px;
+  width: 54px;
+  height: 53px;
+}
+
+.b-ball_n9 {
+  top: 10px;
+  left: 321px;
+  width: 49px;
+  height: 66px;
+}
+
+.b-ball_n1 .b-ball__i {
+  background: url(https://www.dropbox.com/s/6uejpodl90ozcaj/b-ball_n1.png?dl=1) no-repeat;
+}
+
+.b-ball_n2 .b-ball__i {
+  background: url(https://www.dropbox.com/s/ygy31out3i61ry8/b-ball_n2.png?dl=1) no-repeat;
+}
+
+.b-ball_n3 .b-ball__i {
+  background: url(https://www.dropbox.com/s/uaffezwbvb4yuhd/b-ball_n3.png?dl=1) no-repeat;
+}
+
+.b-ball_n4 .b-ball__i {
+  background: url(https://www.dropbox.com/s/j8q7itkqekxwt65/b-ball_n4.png?dl=1) no-repeat;
+}
+
+.b-ball_n5 .b-ball__i {
+  background: url(https://www.dropbox.com/s/8d7jo6a8b7ngfcq/b-ball_n5.png?dl=1) no-repeat;
+}
+
+.b-ball_n6 .b-ball__i {
+  background: url(https://www.dropbox.com/s/x9uqu3fe5cma2ra/b-ball_n6.png?dl=1) no-repeat;
+}
+
+.b-ball_n7 .b-ball__i {
+  background: url(https://www.dropbox.com/s/vn9n8rsl3rfm5kx/b-ball_n7.png?dl=1) no-repeat;
+}
+
+.b-ball_n8 .b-ball__i {
+  background: url(https://www.dropbox.com/s/kbba0lcmcbxjb6p/b-ball_n8.png?dl=1) no-repeat;
+}
+
+.b-ball_n9 .b-ball__i {
+  background: url(https://www.dropbox.com/s/buok8jqo2plg1kh/b-ball_n9.png?dl=1) no-repeat;
+}
+
+.b-ball_i1 .b-ball__i {
+  background: url(https://www.dropbox.com/s/ao4okf3y6xl6zfu/b-ball_i1.png?dl=1) no-repeat;
+}
+
+.b-ball_i2 .b-ball__i {
+  background: url(https://www.dropbox.com/s/o0c0co1gxur78pu/b-ball_i2.png?dl=1) no-repeat;
+}
+
+.b-ball_i3 .b-ball__i {
+  background: url(https://www.dropbox.com/s/hs4frdr0g1sk8qy/b-ball_i3.png?dl=1) no-repeat;
+}
+
+.b-ball_i4 .b-ball__i {
+  background: url(https://www.dropbox.com/s/by8955xypx3rwkx/b-ball_i4.png?dl=1) no-repeat;
+}
+
+.b-ball_i5 .b-ball__i {
+  background: url(https://www.dropbox.com/s/lwub7a629rbdsgf/b-ball_i5.png?dl=1) no-repeat;
+}
+
+.b-ball_i6 .b-ball__i {
+  background: url(https://www.dropbox.com/s/3d0vxlzgutik2xn/b-ball_i6.png?dl=1) no-repeat;
+}
+
+.b-ball_i1 {
+  top: 0;
+  left: 0;
+  width: 25px;
+  height: 71px;
+}
+
+.b-ball_i2 {
+  top: 0;
+  left: 25px;
+  width: 61px;
+  height: 27px;
+}
+
+.b-ball_i3 {
+  top: 0;
+  left: 176px;
+  width: 29px;
+  height: 31px;
+}
+
+.b-ball_i4 {
+  top: 0;
+  left: 205px;
+  width: 50px;
+  height: 51px;
+}
+
+.b-ball_i5 {
+  top: 0;
+  left: 289px;
+  width: 78px;
+  height: 28px;
+}
+
+.b-ball_i6 {
+  top: 0;
+  left: 367px;
+  width: 6px;
+  height: 69px;
+}
+
+.b-ball__i {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-transform-origin: 50% 0;
+  -moz-transform-origin: 50% 0;
+  -o-transform-origin: 50% 0;
+  transform-origin: 50% 0;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  pointer-events: none;
+}
+
+.b-ball_bounce .b-ball__right {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 50%;
+  bottom: 0;
+  z-index: 9;
+}
+
+.b-ball_bounce:hover .b-ball__right {
+  display: none;
+}
+
+.b-ball_bounce .b-ball__right:hover {
+  left: 0;
+  display: block !important;
+}
+
+.b-ball_bounce.bounce>.b-ball__i {
+  -webkit-transform: rotate(-9deg);
+  -moz-transform: rotate(-9deg);
+  -o-transform: rotate(-9deg);
+  transform: rotate(-9deg);
+}
+
+.b-ball_bounce .b-ball__right.bounce+.b-ball__i {
+  -webkit-transform: rotate(9deg);
+  -moz-transform: rotate(9deg);
+  -o-transform: rotate(9deg);
+  transform: rotate(9deg);
+}
+
+.b-ball_bounce.bounce1>.b-ball__i {
+  -webkit-transform: rotate(6deg);
+  -moz-transform: rotate(6deg);
+  -o-transform: rotate(6deg);
+  transform: rotate(6deg);
+}
+
+.b-ball_bounce .b-ball__right.bounce1+.b-ball__i {
+  -webkit-transform: rotate(-6deg);
+  -moz-transform: rotate(-6deg);
+  -o-transform: rotate(-6deg);
+  transform: rotate(-6deg);
+}
+
+.b-ball_bounce.bounce2>.b-ball__i {
+  -webkit-transform: rotate(-3deg);
+  -moz-transform: rotate(-3deg);
+  -o-transform: rotate(-3deg);
+  transform: rotate(-3deg);
+}
+
+.b-ball_bounce .b-ball__right.bounce2+.b-ball__i {
+  -webkit-transform: rotate(3deg);
+  -moz-transform: rotate(3deg);
+  -o-transform: rotate(3deg);
+  transform: rotate(3deg);
+}
+
+.b-ball_bounce.bounce3>.b-ball__i {
+  -webkit-transform: rotate(1.5deg);
+  -moz-transform: rotate(1.5deg);
+  -o-transform: rotate(1.5deg);
+  transform: rotate(1.5deg);
+}
+
+.b-ball_bounce .b-ball__right.bounce3+.b-ball__i {
+  -webkit-transform: rotate(-1.5deg);
+  -moz-transform: rotate(-1.5deg);
+  -o-transform: rotate(-1.5deg);
+  transform: rotate(-1.5deg);
+}
+/*олени*/ 
+/*
 .sleigh {
-    font-size: 3rem;
-    text-shadow: 0 0 0 #06223f; /*recolor emojis*/
+    font-size: 100rem;
+    text-shadow: 0 0 0 #06223f; 
   }
   .santa {
     animation-name: up, across;
@@ -357,3 +682,4 @@ a.bott{
       right: 100%;
     }
   }
+*/
